--- a/views/user_new.jade
+++ b/views/user_new.jade
@@ -3,7 +3,22 @@ extends layout
 block content
 	p hello
 	form(name="input", action="/users", method="post")
-		| Email:
-		input(type="text", name="email")
+		p
+			| Email:
+			input(type="text", name="email")
+
+		p
+			| Name:
+			input(type="text", name="name")
+
+		p
+			| Date Of Birth
+			input(type="text", name="dateOfBirth")
+		p
+			| Year started at KTHD
+			input(type="text", name="startYear")
+		p
+			| Year completed studies at KTHD
+			input(type="text", name="endYear")
 
 		input(type="submit", value="Submit")
