--- a/views/user_index.jade
+++ b/views/user_index.jade
@@ -8,4 +8,5 @@ block content
   ul
     -for user in users
       li
-        a(href="/user/#{user._id}")= user.email
+        a(href="/users/#{user._id}")= user.email
+        a(href="/users/#{user._id}/delete") Remove
