new views for group

--- a/views/group_index.jade
+++ b/views/group_index.jade
@@ -4,7 +4,7 @@ block content
   h1= title
 
   p We have a list of groups
-  a(href="/users/new") Create a new group
+  a(href="/groups/new") Create a new group
 
   ul
     -for group in groups
