--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,4 +4,13 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    #wrapper
+      #header
+        h1#title Emeriti
+        ul#nav
+          li
+            a(href="/users") Start
+          li
+            a(href="/users/new") New
+      #body
+        block content
