--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,8 @@ html
   body
     #wrapper
       #header
-        h1#title Emeriti
+        h1#title
+          a(href="/") Emeriti
         ul#nav
           li
             a(href="/users") Start
