--- a/views/group_index.jade
+++ b/views/group_index.jade
@@ -9,5 +9,5 @@ block content
   ul
     -for group in groups
       li
-        a(href="/users/#{group._id}") Grupp: #{group.name}
-        a(href="/users/#{group._id}/delete") Remove
+        a(href="/groups/#{group._id}") Grupp: #{group.name}&rarr;
+        a(href="/groups/#{group._id}/delete") Remove
