Convert users listing into a styled table

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,6 +82,28 @@ a {
 a:hover { text-decoration: underline; }
 
 /*}}}*/
+/*{{{ Tables */
+
+table {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 10px 0;
+	table-collapse: collape;
+	width: 100%;
+}
+
+td, th {
+	padding: 2px 10px 2px 0;
+	text-align: left;
+}
+td.num, th.num, td.right, th.right, td.actions, th.actions {
+	padding-right: 0;
+	padding-left: 10px;
+	text-align: right;
+}
+
+/*}}}*/
 /*{{{ Responsive */
 
 @media screen and (max-width: 540px) {
