--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,6 @@ blockquote:before, blockquote:after, q:before, q:after {
 body {
 	color: #444;
 	background: #8be;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 #wrapper {
@@ -40,11 +39,12 @@ body {
 #title {
 	float: left;
 	margin: 0 40px 0 20px;
+	line-height: 1;
 }
 
 #nav {
 	float: left;
-	margin: 14px 0 0 0;
+	margin: 6px 0 0 0;
 	list-style-type: none;
 }
 #nav li { display: inline; }
@@ -66,6 +66,10 @@ body {
 
 /*}}}*/
 /*{{{ Typography */
+
+body {
+  font: 14px/1.5 "Lucida Grande", Helvetica, Arial, sans-serif;
+}
 
 h1, h2, h3, h4 { margin: 1em 0 0; }
 h1 { font-size: 2.5em; }
@@ -104,6 +108,98 @@ td.num, th.num, td.right, th.right, td.actions, th.actions {
 }
 
 /*}}}*/
+/*{{[ Forms */
+
+form, fieldset {
+	margin: 0;
+	padding: 0;
+}
+
+fieldset {
+	border: 0;
+	margin: 0 0 1em;
+	padding: 0;
+}
+
+label, dl.attr dt {
+	display: inline-block;
+	padding: 1px 0;
+	color: #000;
+	font-weight: bold;
+}
+
+label[for], input, select {
+	font-size: 12px;
+	cursor: pointer;
+}
+input[type='text'],
+input[type='password'] {
+	cursor: text;
+}
+
+select,
+input[type='text'],
+input[type='password'] {
+	margin: 0;
+	padding: 4px 8px;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 100%;
+	border: 1px solid #aaa;
+	-moz-box-shadow: 0 1px 0 #fff, inset 0 1px 1px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 1px 0 #fff, inset 0 1px 1px rgba(0,0,0,0.2);
+	box-shadow: 0 1px 0 #fff, inset 0 1px 1px rgba(0,0,0,0.2);
+	color: #000;
+	background: #f6f6f6;
+	vertical-align: middle;
+	outline: none;
+}
+
+input:focus, textarea:focus {
+	background: #fbfbfb;
+}
+
+input[type='button'], input[type='submit'] {
+	display: inline-block;
+	margin: 0;
+	padding: 8px 20px;
+	border: 1px solid #888;
+	-moz-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.2), inset 0 1px 0pt rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.2), inset 0 1px 0pt rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.2);
+	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.2), inset 0 1px 0pt rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.2);
+	color: #333;
+	background: #ddd;
+	font-weight: bold;
+}
+input[type='button']:hover, input[type='submit']:hover {
+	background: #e6e6e6;
+}
+input[type='button']:active, input[type='submit']:active {
+	position: relative;
+	top: 1px;
+}
+
+.input {
+	margin-bottom: 10px;
+	max-width: 340px;
+}
+.input label { display: block; }
+.input .multi label {
+	display: inline-block;
+	margin-right: 10px;
+	font-size: 14px;
+	font-weight: normal;
+}
+.input.date select { width: auto; }
+
+.input.has-errors .error {
+	display: block;
+	color: #922;
+	font-size: 12px;
+}
+
+/*]}}*/
 /*{{{ Responsive */
 
 @media screen and (max-width: 540px) {
